# AI-Voice-Assistant-with-Phone-Call-Integration

./: .gitignore  Procfile  README.md  requirements.txt
js_server/: .gitignore  package-lock.json  package.json
js_server/src/: index.ts
js_server/src/lib/: langchain_openai_voice.ts
js_server/static/: audio-playback-worklet.js  audio-processor-worklet.js  audio.js  index-bob.html  index.html  sip-client-bob.js  sip-client.js
js_server/static/libs/: sip.js
server/: pyproject.toml
server/src/server/: app.py
server/src/server/static/: index.html
src/langchain_openai_voice/: __init__.py  utils.py
src/server/: app.py  make_call.py  tools.py
