[project]
name = "server"
version = "0.1.0"
description = "AI-Voice-Assistant-with-Phone-Call-Integration"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain-community>=0.3.1",
    "langgraph>=0.2.32",
    "starlette>=0.39.2",
    "uvicorn[standard]>=0.31.0",
    "twilio>=9.2.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "g711==1.6.5",
    "python-multipart==0.0.9",
    "numpy>=2.3.3",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]


